--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mars-tv-html",
   "version": "1.0.0",
-  "description": "",
+  "description": "Hello there, This is the first version of the code",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
